# Hush

./: .gitignore  .gitmodules  ArchiveTuneKoiverseServer.txt  CHANGELOG.md  CONTRIBUTING.md  NAVIGATION_BAR_BLUR_GUIDE.md  PRIVACY.md  README.md  README_JA.md  build.gradle.kts  gradle.properties  local.properties.example  renovate.json  settings.gradle.kts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: prepare-shim-signing.sh  setup-android-signing-env.sh  validate-signing-secrets.sh
.github/workflows/: backup.yml  build.yml  (+10 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  discord_social_bridge.cpp
assets/: Announcement.json
betterlyrics/: build.gradle.kts
branding/: generate_hush_icons.py
color/: build.gradle.kts
core/: README.md
gradle/: libs.versions.toml
innertube/: build.gradle.kts
jiosaavn/: build.gradle 2.kts  build.gradle.kts
patches/: core-hush-innertube 2.patch  core-innertube-ip-version.patch
release_notes/: v13.10.0.md  v13.11.0.md  v13.11.1.md  v13.11.2.md  v13.11.3.md  v13.11.4.md  v13.11.5.md  v13.11.7.md  v13.11.8.md  v13.8.5.md  v13.8.6.md  v13.8.7.md  v13.8.8.md  v13.8.9.md  v13.9.0.md
scripts/: apply-submodule-patches.sh  build-foss-mobile-release.sh  build-gms-mobile-release.sh  build-mobile-release.sh  build-release.sh  build-tv-release.sh  clean-build-safe.sh  generate-release-notes.sh  optimize-assets.sh  rename_to_hush.py  resign-release-apk.sh  sync-release-docs.sh
waze-shim/: build.gradle.kts  proguard-rules.pro
(+2121 files in other folders)
